hphp/hack/test/typecheck/sound_dynamic_marker_types_is_as.php.exp
WARN: File "sound_dynamic_marker_types_is_as.php", line 4, characters 3-37:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `string`. (Warn[12012])
ERROR: File "sound_dynamic_marker_types_is_as.php", line 4, characters 8-37:
Invalid `as` expression hint (Typing[4195])
  File "sound_dynamic_marker_types_is_as.php", line 4, characters 8-37:
  The `as` operator cannot be used with a type with generics, because generics are erased at runtime
