hphp/hack/test/typecheck/sound_dynamic_marker_types_is_as.php
<?hh

function f(): void {
  3 as HH\FIXME\TANY_MARKER<int>;
  4 as HH\FIXME\POISON_MARKER<string>;
  4 as HH\FIXME\SUPPORTDYN_MARKER<string>;
}
